Fixing a spacing issue with some text

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -516,6 +516,6 @@ body.dark-theme #see-more-btn {
     }
 
     #see-more-btn{
-        width: 190px;
+        width: 80px;
     }
 }
